# interface_meta

./: .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  tox.yml
interface_meta/: __init__.py  _version.py  decorators.py  interface.py
interface_meta/utils/: conformance.py  docs.py  inspection.py  reporting.py
tests/: test_decorators.py  test_interface.py  test_signature_checking.py
tests/utils/: test_conformance.py  test_docs.py  test_inspection.py  test_reporting.py
