[tool.poetry]
name = "interface_meta"
version = "0.0.0"
description = "`interface_meta` provides a convenient way to expose an extensible API with enforced method signatures and consistent documentation."
authors = ["Matthew Wardrop <mpwardrop@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers"
]

include = [
    { path = "tests", format = "sdist" },
    { path = ".flake8", format = "sdist" },
    { path = "tox.ini", format = "sdist" },
    { path = "poetry.lock", format = "sdist" },
]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
